Implemented sequelize ORM library, refactored and added new features
