# controllers/authenticate.js
@@ -1,40 +1,44 @@
-const db = require('../db');
 const jwtUtil = require('../util/jwtutil')
+const User = require('../models/User')
+const Encrypt = require('../util/encrypt')
 
 const Authenticate = {
     
     // For actually authenticating the user
     authenticate: function(req, res, next)
     {
-        var sql = 'SELECT iduser, username, email FROM user WHERE username = ? AND password = ?'
-        var inserts = [req.body.username, req.body.password]
-
-        //Execute query
-        db.query(sql
-        , inserts
-        , function(error, results, fields){
-            var resultJson = JSON.stringify(results);
-            resultJson = JSON.parse(resultJson);
-            //Pass error up to express
-            if(error){
-                next(error)
+        let username = req.body.username
+        let password = req.body.password
+        User.findOne({
+            where: {
+                username : username
             }
-            //Invalid user
-            else if(resultJson.length === 0)
+        }).then(user => {
+            if(user === null)
             {
-                res.status(404).send("Invalid User supplied")
+                res.status(404).json({"message": "invalid user supplied"})
             }
-            else
-            {
-                //Add data to JWT, excluding password
-                let payload = {};
-                payload.iduser = resultJson[0].iduser
-                payload.username = resultJson[0].username
-                payload.email = resultJson[0].email
-                //Sign a new JWT
-                var token = jwtUtil.sign(payload)
-                res.status(200).header('jwt', token).send("Valid User supplied")
-            }
+            else {
+                //Make sure password is a match
+                if(!Encrypt.compare(password, user.password))
+                {
+                    res.status(400).json({"message": "invalid password"})
+                }
+                else
+                {
+                    //Add data to JWT, excluding password
+                    let payload = {};
+                    payload.userId = user.userId
+                    payload.username = user.username
+                    payload.email = user.email
+                    payload.districtId = user.districtDistrictId
+                    //Sign a new JWT
+                    var token = jwtUtil.sign(payload)
+                    res.status(200).header('jwt', token).json({"message": "Valid User supplied"})
+                }
+        }
+        }).catch(e => {
+            next(e)
         })
     }
 }
