# controllers/candidate.js
@@ -1,37 +1,74 @@
 const db = require('../db');
-
-const Candidate = {
+const Candidate = require('../models/Candidate')
+const Election = require('../models/Election')
+const Party = require('../models/Party')
+const Vote = require('../models/Vote')
+module.exports = {
 
     //Create a new candidate
     create: function(req, res, next)
     {
-        let sql = 'INSERT INTO candidate (candidatename, idparty, incumbent) VALUES (?,?,?)'
-        let results = db.query(sql, [req.body.name, req.body.party, req.body.incumbent]
-            , function(error, results, fields){
-                if(error)
-                {
-                    next(error)
-                } else {
-                    res.status('201').send()
-                }
-            })
+        if(typeof req.body.name === undefined
+            || typeof req.body.party === undefined)
+            {
+                res.status(400).json({"message": "invalid request"})
+                return
+            }
+        Candidate.create({
+            name: req.body.name,
+            partyPartyId: req.body.party
+        }).then(()=>{
+            res.status('201').json({"message":"created"})
+        }).catch(e => {
+             next(e)
+        })
     },
 
     //Get all of the candidates
     getAll: function(req, res, next)
     {
-        let sql = 'SELECT * FROM candidate c JOIN party p on p.idparty = c.idparty'
-        let results = db.query(sql,
-            function(error, results){
-                if(error){
-                    next(error)
-                }
-                else
-                {
-                    res.status('200').json(results)
-                }
+        Candidate.findAll({include: [Party, Election]}).then(candidates => {
+            let results = []
+            candidates.forEach(candidate => {
+                let result = {}
+                result.name = candidate.name
+                result.party = candidate.party.name
+                result.election = candidate.election
+                result.candidateId = candidate.candidateId
+                //result.party = candidate.partyPartyId
+                results.push(result)
             })
+            res.status(200).json(results)
+        }).catch(e => {
+            next(e)
+        })
+    },
+    getForElection: function(req, res, next)
+    {
+        if(typeof req.params.electionId === undefined)
+        {
+            res.status(400).json({"message": "invalid request"})
+            return
+        }
+        let electionId = req.params.electionId
+        Candidate.findAll({
+            where: {
+                electionElectionId: electionId
+            },
+            include: [Party, Vote]
+        }).then(candidates => {
+            let output = [];
+            candidates.forEach(candidate => {
+                let item = {};
+                item.name = candidate.name
+                item.party = candidate.party.name
+                item.candidateId = candidate.candidateId
+                item.votes = candidate.votes.length
+                output.push(item)
+            })
+            res.status(200).json(output)
+        }).catch(e => {
+            next(e)
+        })
     }
 }
-
-module.exports = Candidate
