# controllers/election.js
@@ -1,102 +1,231 @@
-const db = require('../db');
+const Election = require('../models/Election')
+const Candidate = require('../models/Candidate')
+const District = require('../models/District')
+const Vote = require('../models/Vote')
+const Party = require('../models/Party')
 const jwtUtil = require('../util/jwtutil')
+const Sequelize = require('sequelize')
+const Promise = require('bluebird')
 
-const Election = {
-
-    //Create
+module.exports = {
+    //Create a new election
     create: function(req, res, next)
     {
+        if(typeof req.body.name === undefined
+            || typeof req.body.start === undefined
+            || typeof req.body.end === undefined
+            || typeof req.body.district === undefined
+            || typeof req.body.candidates === undefined)
+        {
+            res.status(400).json({"message": "invalid request"})
+            return
+        }
         let election = req.body
-        //first insert the new election, then insert the candidates to the relationship table
-        let electionSql = 'INSERT INTO election (electionname, startdate, enddate)' +
-            ' VALUES (?, ?, ?)'
-        let inserts = [election.name, election.start, election.end]
-        let results = db.query(electionSql, inserts, function(error, results){
-            if(error)
-            {
-                next(error)
-            } else {
-                db.query('SELECT LAST_INSERT_ID() as pk', function(error, results){
-                    var resultJson = JSON.stringify(results);
-                    resultJson = JSON.parse(resultJson);
-                    var electionId = resultJson[0].pk;
-                    //Insert the candidates to the election
-                    let inserts = [];
-                    let candidateSql = 'INSERT INTO electioncandidates (idelections, idcandidate) VALUES '
-                    for(var i = 0; i < election.candidates.length; i++)
-                    {
-                        if(i === 0){
-                            candidateSql += "(?, ?)"
-                        } else {
-                            candidateSql += ", (?, ?)"
-                        }
-                        inserts.push(electionId);
-                        inserts.push(election.candidates[i].idcandidate);
-
-                    }
-
-                    db.query(candidateSql, inserts, function(error, results){
-                        if(error)
-                        {
-                            next(error)
-                        }else{
-                            res.status('201').send("Election created")
-                        }
-                    })
-                })
-            }
+        let candidates = [];
+        //Add all the candidates
+        election.candidates.forEach(item => {
+            candidates.push(item.candidateId);
         })
+        
+        //Create the election
+        Election.create({
+            name: election.name,
+            start: election.start,
+            end: election.end,
+            districtDistrictId: election.district
+        }).then(election => {
+            //Get all candidates and associate them with the election
+            Candidate.findAll({
+                where: {
+                    candidateId: {
+                        [Sequelize.Op.or]: candidates
+                      } 
+                }
+            }).then(candidates => {
+                candidates.forEach(item => {
+                    //Does the update
+                    item.setElection(election)
+                })
+
+                res.status(201).json({"message": "Election created"})
+            }).catch(e => {
+                next(e)
+            })
+        }).catch(e => {
+            next(e)
+        })
+        
     },
+    //Vote on an election
     vote: function(req, res, next)
     {
-        let idelection = req.body.idelection
-        let idcandidate = req.body.idcandidate
-        //First check to see if the current user has voted 
+        if(typeof req.body.electionId === undefined
+            || typeof req.body.candidateId === undefined)
+        {
+            res.status(400).json({"message": "invalid request"})
+            return
+        }
+        let candidateId = req.body.candidateId
+        let electionId = req.body.electionId
+        //Get user's district from jwt
         let user = jwtUtil.verify(req.header('jwt'))
-
-    
-        let sql = 'SELECT * from votes where idelection = ? and iduser = ?'
-        let inserts = [idelection, user.iduser]
-
-        db.query(sql, inserts, function(error, results){
-            if(error){
-                next(error)
-            } else if(results.length > 0)
+        let district = user.districtId
+        //Check if the user is eligble for this election (by district)
+        canVoteInElection(district, electionId, next).then(can => {
+            //This election is not available to the user
+            if(!can)
             {
-                res.status('403').send("User has already voted")
-
-            } else {
-                //Now the real vote is cast!
-                let sql = 'INSERT INTO votes (idelection, iduser, idcandidate) VALUES (?,?,?)'
-                let inserts = [idelection, user.iduser, idcandidate]
-                db.query(sql, inserts, function(error, results){
-                    if(error){
-                        next(error)
-                    }else{
-                        res.status(200).send("Vote cast!")
-
+                res.status(401).json({"message": "User is unauthorized to vote in this election"})
+            }
+            else
+            {
+                //Make sure the user hasn't already voted on this election
+                Vote.findOne({
+                    where: {
+                        electionElectionId: electionId,
+                        userUserId: user.userId
                     }
+                }).then(vote => {
+                    if(vote !== null)
+                    {
+                        res.status(401).json({"message": "Unauthorized, user has already voted"})
+                    }
+                    else
+                    {
+                        //If the user hasn't voted, we can submit the vote
+                        Vote.create({
+                            candidateCandidateId: candidateId,
+                            electionElectionId: electionId,
+                            userUserId: user.userId
+                        }).then(() => {
+                            res.status(201).json({"message": "vote cast"})
+                        }).catch(e => {
+                            next(e)
+                        })
+                    } 
+                }).catch(e => {
+                    next(e)
                 })
             }
-
-
-            
         })
+        
     },
-    getActiveElections: function(req, res, next){
-        //Query to get elections and current standings
-        let sql = 'SELECT count(*) as votes, c.candidatename, e.electionname FROM election e left join votes v on v.idelection = e.idelection join candidate c on v.idcandidate = c.idcandidate group by c.candidatename, e.electionname ORDER BY e.electionname'
-        db.query(sql, function(error, results){
-            if(error){
-                next(error)
+    //Get all elections for a user's ballot
+    getBallot: function(req, res, next)
+    {
+        let user = jwtUtil.verify(req.header('jwt'))
+        getElectionsForDistrict(user.districtId, next).then(elections => {
+            res.status(200).json(elections)
+        }).catch(e => {next(e)})
+        
+    },
+    //Get the result of an election
+    // TODO only say winner if the election is over (past the end date)
+    result: function(req, res, next)
+    {
+        let results = {};
+        results.candidates = [];
+        let electionId = req.params.electionId
+        //Get all candidates for the election
+        Candidate.findAll({
+            where: {
+                electionElectionId: electionId
+            },
+            include: [Vote, Party]
+        }).then(candidates => {
+            //Aggregate results
+            var winning = []
+            var most = 0;
+            candidates.forEach(candidate => {
+                let obj = {}
+                obj.name = candidate.name
+                obj.party = candidate.party.name
+                obj.votes = candidate.votes.length
+                //Mark the current winner
+                if(candidate.votes.length > most)
+                {
+                    most = candidate.votes.length
+                    winning = []
+                    winning.push(candidate.name)
+                }
+                //Keep track of ties
+                else if(candidate.votes.length === most)
+                {
+                    winning.push(candidate.name)
+                }
+                results.candidates.push(obj)
+            })
+            results.tie = false;
+            //Denotes a tie
+            if(winning.length > 1)
+            {
+                results.tie = true
+                results.winners = winning
             } else {
-                var resultJson = JSON.stringify(results);
-                results = JSON.parse(resultJson);
-                res.status(200).json(results)
+                results.winner = winning[0];
             }
-            
-        })
+            res.status(200).json(results)
+        }).catch(e => {next(e)})
     }
 }
 
-module.exports = Election
+//Determine if a user's district allows them to vote in this election
+function canVoteInElection(districtId, electionId, next)
+{
+    return new Promise(function(resolve, reject){
+        getElectionsForDistrict(districtId, next)
+        .then(elections => {
+            elections.forEach(election => {
+                if(election.electionId === electionId)
+                {
+                    resolve(true)
+                    return
+                }
+            })
+            resolve(false)
+        })
+    })
+
+}
+
+//Get all of the elections available to a district
+function getElectionsForDistrict(districtId, next)
+{
+    return new Promise(function(resolve, reject){
+        let districtIds = [];
+        District.findOne({
+            where: {
+                districtId: districtId
+            }
+        }).then(district => {
+            districtIds.push(district.districtId);
+            //If district has parent, add it
+            district.getParent().then(parent => getParentDistricts(parent, districtIds, next))
+            .finally(() => {
+                Election.findAll({
+                    where: {
+                        districtDistrictId: {
+                            [Sequelize.Op.or]: districtIds
+                        }
+                    }
+                }).then(elections => {
+                    resolve(elections)
+                })
+                .catch(e => {
+                    reject(e)
+                })
+            }) 
+        })
+    })
+}
+
+//Recursively get all parent districts
+function getParentDistricts(district, districtIds, next)
+{
+    if(district === null)
+    {
+        return districtIds;
+    }
+    districtIds.push(district.districtId)
+    district.getParent().then(parent => getParentDistricts(parent, districtIds, next)).catch(e => {next(e)})
+}
